[FIX] Obsidian Shrine Visit Click + Timer Alignment + Price Backdrop (#6614)
* [FIX] Timers and pit and composter showing as ready on load

* [FEAT] Add price backdrop for marketplace

* [FIX] Obsidian Shrine clickable when visiting

* Update ListViewCard.tsx

* [CHORE] Update opacity and remove state dependency

--- a/src/styles.css
+++ b/src/styles.css
@@ -457,6 +457,48 @@ img {
   z-index: -1;
 }
 
+.nft-marketplace-flower-price-backdrop {
+  left: -4px;
+  top: 1px;
+  overflow: hidden;
+  -webkit-mask-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 10%,
+    rgba(255, 255, 255, 1) 85%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  mask-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 10%,
+    rgba(255, 255, 255, 1) 85%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  z-index: -1;
+}
+
+.nft-marketplace-usd-price-backdrop {
+  left: -4px;
+  top: 1px;
+  overflow: hidden;
+  -webkit-mask-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 18%,
+    rgba(255, 255, 255, 1) 85%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  mask-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 18%,
+    rgba(255, 255, 255, 1) 85%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  z-index: -1;
+}
+
 .balance-text {
   color: white;
   /* text-shadow: 1px 1px black; */
